Closed
Bug 1184130
Opened 10 years ago
Closed 10 years ago
Report mismatches of adapter description and vendor id that we get from the registry
Categories
(Core :: Graphics: Layers, defect)
Core
Graphics: Layers
Tracking
()
RESOLVED
FIXED
mozilla42
| Tracking | Status | |
|---|---|---|
| firefox42 | --- | fixed |
People
(Reporter: jrmuizel, Assigned: jrmuizel)
References
Details
Attachments
(1 file)
|
2.30 KB,
patch
|
bas.schouten
:
review+
|
Details | Diff | Splinter Review |
I'm hoping this will detect when the discrete gpu of an optimus configuration is being used.
Attachment #8634100 -
Flags: review?(bas)
Updated•10 years ago
|
Attachment #8634100 -
Flags: review?(bas) → review+
Assignee: nobody → jmuizelaar
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox42:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Comment 3•9 years ago
|
||
In bug 1267997, we're seeing crashes with the "VendorIDMismatch" string in the
graphics errors, even though that crash is not NVIDIA-only.
See Also: → 1267997
You need to log in
before you can comment on or make changes to this bug.
Description
•