Bug 1184130. Report mismatches of adapter description and vendor id that we get from the registry. r=bas

This should help us detect optimus configurations better.

--HG--
extra : rebase_source : d01289129b0ba4ad26b28275f70f85d62991c08e